// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VTimePicker.js should accept a date object for a value 1`] = `

<div class="picker picker--time card"
     style="height: auto;"
>
  <div class="picker__title primary">
    <div class="time-picker-title">
      <div class="time-picker-title__time">
        <div class="picker__title__btn active">
          12
        </div>
        <span>
          :
        </span>
        <div class="picker__title__btn">
          00
        </div>
      </div>
      <div class="time-picker-title__ampm">
        <div class="picker__title__btn active">
          am
        </div>
        <div class="picker__title__btn">
          pm
        </div>
      </div>
    </div>
  </div>
  <div class="picker__body"
       style="width: 290px;"
  >
    <div class="time-picker-clock__container"
         style="width: 290px; height: 290px;"
    >
      <div class="time-picker-clock"
           style="height: 270px; width: 270px;"
      >
        <div class="time-picker-clock__hand accent">
        </div>
        <span class="active accent">
          <span>
            12
          </span>
        </span>
        <span class>
          <span>
            1
          </span>
        </span>
        <span class>
          <span>
            2
          </span>
        </span>
        <span class>
          <span>
            3
          </span>
        </span>
        <span class>
          <span>
            4
          </span>
        </span>
        <span class>
          <span>
            5
          </span>
        </span>
        <span class>
          <span>
            6
          </span>
        </span>
        <span class>
          <span>
            7
          </span>
        </span>
        <span class>
          <span>
            8
          </span>
        </span>
        <span class>
          <span>
            9
          </span>
        </span>
        <span class>
          <span>
            10
          </span>
        </span>
        <span class>
          <span>
            11
          </span>
        </span>
      </div>
    </div>
  </div>
</div>

`;

exports[`VTimePicker.js should accept a value 1`] = `

<div class="picker picker--time card"
     style="height: auto;"
>
  <div class="picker__title primary">
    <div class="time-picker-title">
      <div class="time-picker-title__time">
        <div class="picker__title__btn active">
          9
        </div>
        <span>
          :
        </span>
        <div class="picker__title__btn">
          12
        </div>
      </div>
      <div class="time-picker-title__ampm">
        <div class="picker__title__btn active">
          am
        </div>
        <div class="picker__title__btn">
          pm
        </div>
      </div>
    </div>
  </div>
  <div class="picker__body"
       style="width: 290px;"
  >
    <div class="time-picker-clock__container"
         style="width: 290px; height: 290px;"
    >
      <div class="time-picker-clock"
           style="height: 270px; width: 270px;"
      >
        <div class="time-picker-clock__hand accent">
        </div>
        <span class>
          <span>
            12
          </span>
        </span>
        <span class>
          <span>
            1
          </span>
        </span>
        <span class>
          <span>
            2
          </span>
        </span>
        <span class>
          <span>
            3
          </span>
        </span>
        <span class>
          <span>
            4
          </span>
        </span>
        <span class>
          <span>
            5
          </span>
        </span>
        <span class>
          <span>
            6
          </span>
        </span>
        <span class>
          <span>
            7
          </span>
        </span>
        <span class>
          <span>
            8
          </span>
        </span>
        <span class="active accent">
          <span>
            9
          </span>
        </span>
        <span class>
          <span>
            10
          </span>
        </span>
        <span class>
          <span>
            11
          </span>
        </span>
      </div>
    </div>
  </div>
</div>

`;

exports[`VTimePicker.js should change am/pm when updated from model 1`] = `

<div class="picker picker--time card"
     style="height: auto;"
>
  <div class="picker__title primary">
    <div class="time-picker-title">
      <div class="time-picker-title__time">
        <div class="picker__title__btn active">
          9
        </div>
        <span>
          :
        </span>
        <div class="picker__title__btn">
          00
        </div>
      </div>
      <div class="time-picker-title__ampm">
        <div class="picker__title__btn active">
          am
        </div>
        <div class="picker__title__btn">
          pm
        </div>
      </div>
    </div>
  </div>
  <div class="picker__body"
       style="width: 290px;"
  >
    <div class="time-picker-clock__container"
         style="width: 290px; height: 290px;"
    >
      <div class="time-picker-clock"
           style="height: 270px; width: 270px;"
      >
        <div class="time-picker-clock__hand accent">
        </div>
        <span class>
          <span>
            12
          </span>
        </span>
        <span class>
          <span>
            1
          </span>
        </span>
        <span class>
          <span>
            2
          </span>
        </span>
        <span class>
          <span>
            3
          </span>
        </span>
        <span class>
          <span>
            4
          </span>
        </span>
        <span class>
          <span>
            5
          </span>
        </span>
        <span class>
          <span>
            6
          </span>
        </span>
        <span class>
          <span>
            7
          </span>
        </span>
        <span class>
          <span>
            8
          </span>
        </span>
        <span class="active accent">
          <span>
            9
          </span>
        </span>
        <span class>
          <span>
            10
          </span>
        </span>
        <span class>
          <span>
            11
          </span>
        </span>
      </div>
    </div>
  </div>
</div>

`;

exports[`VTimePicker.js should render colored time picker 1`] = `

<div class="picker picker--time card"
     style="height: auto;"
>
  <div class="picker__title orange darken-1">
    <div class="time-picker-title">
      <div class="time-picker-title__time">
        <div class="picker__title__btn active">
          9
        </div>
        <span>
          :
        </span>
        <div class="picker__title__btn">
          00
        </div>
      </div>
      <div class="time-picker-title__ampm">
        <div class="picker__title__btn active">
          am
        </div>
        <div class="picker__title__btn">
          pm
        </div>
      </div>
    </div>
  </div>
  <div class="picker__body"
       style="width: 290px;"
  >
    <div class="time-picker-clock__container"
         style="width: 290px; height: 290px;"
    >
      <div class="time-picker-clock"
           style="height: 270px; width: 270px;"
      >
        <div class="time-picker-clock__hand primary">
        </div>
        <span class>
          <span>
            12
          </span>
        </span>
        <span class>
          <span>
            1
          </span>
        </span>
        <span class>
          <span>
            2
          </span>
        </span>
        <span class>
          <span>
            3
          </span>
        </span>
        <span class>
          <span>
            4
          </span>
        </span>
        <span class>
          <span>
            5
          </span>
        </span>
        <span class>
          <span>
            6
          </span>
        </span>
        <span class>
          <span>
            7
          </span>
        </span>
        <span class>
          <span>
            8
          </span>
        </span>
        <span class="active primary">
          <span>
            9
          </span>
        </span>
        <span class>
          <span>
            10
          </span>
        </span>
        <span class>
          <span>
            11
          </span>
        </span>
      </div>
    </div>
  </div>
</div>

`;

exports[`VTimePicker.js should render colored time picker 2`] = `

<div class="picker picker--time card"
     style="height: auto;"
>
  <div class="picker__title orange darken-1">
    <div class="time-picker-title">
      <div class="time-picker-title__time">
        <div class="picker__title__btn active">
          9
        </div>
        <span>
          :
        </span>
        <div class="picker__title__btn">
          00
        </div>
      </div>
      <div class="time-picker-title__ampm">
        <div class="picker__title__btn active">
          am
        </div>
        <div class="picker__title__btn">
          pm
        </div>
      </div>
    </div>
  </div>
  <div class="picker__body"
       style="width: 290px;"
  >
    <div class="time-picker-clock__container"
         style="width: 290px; height: 290px;"
    >
      <div class="time-picker-clock"
           style="height: 270px; width: 270px;"
      >
        <div class="time-picker-clock__hand orange darken-1">
        </div>
        <span class>
          <span>
            12
          </span>
        </span>
        <span class>
          <span>
            1
          </span>
        </span>
        <span class>
          <span>
            2
          </span>
        </span>
        <span class>
          <span>
            3
          </span>
        </span>
        <span class>
          <span>
            4
          </span>
        </span>
        <span class>
          <span>
            5
          </span>
        </span>
        <span class>
          <span>
            6
          </span>
        </span>
        <span class>
          <span>
            7
          </span>
        </span>
        <span class>
          <span>
            8
          </span>
        </span>
        <span class="active orange darken-1">
          <span>
            9
          </span>
        </span>
        <span class>
          <span>
            10
          </span>
        </span>
        <span class>
          <span>
            11
          </span>
        </span>
      </div>
    </div>
  </div>
</div>

`;

exports[`VTimePicker.js should render landscape component 1`] = `

<div class="picker picker--time card picker--landscape"
     style="height: auto;"
>
  <div class="picker__title picker__title--landscape primary">
    <div class="time-picker-title">
      <div class="time-picker-title__time">
        <div class="picker__title__btn active">
          9
        </div>
        <span>
          :
        </span>
        <div class="picker__title__btn">
          12
        </div>
      </div>
      <div class="time-picker-title__ampm">
        <div class="picker__title__btn active">
          am
        </div>
        <div class="picker__title__btn">
          pm
        </div>
      </div>
    </div>
  </div>
  <div class="picker__body"
       style="width: 290px;"
  >
    <div class="time-picker-clock__container"
         style="width: 290px; height: 230px;"
    >
      <div class="time-picker-clock"
           style="height: 210px; width: 210px;"
      >
        <div class="time-picker-clock__hand accent">
        </div>
        <span class>
          <span>
            12
          </span>
        </span>
        <span class>
          <span>
            1
          </span>
        </span>
        <span class>
          <span>
            2
          </span>
        </span>
        <span class>
          <span>
            3
          </span>
        </span>
        <span class>
          <span>
            4
          </span>
        </span>
        <span class>
          <span>
            5
          </span>
        </span>
        <span class>
          <span>
            6
          </span>
        </span>
        <span class>
          <span>
            7
          </span>
        </span>
        <span class>
          <span>
            8
          </span>
        </span>
        <span class="active accent">
          <span>
            9
          </span>
        </span>
        <span class>
          <span>
            10
          </span>
        </span>
        <span class>
          <span>
            11
          </span>
        </span>
      </div>
    </div>
  </div>
</div>

`;
